Add parallel tests

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -42,6 +42,9 @@
 
         .card button {
             width: 75px;
+        }
+        .row {
+            margin-bottom: 15px;
             }
     </style>
 </head>
@@ -63,7 +66,7 @@
                         <h5 class="card-title">REST get</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Test fetching array of items from REST endpoint</h6>
                         <p class="card-text">
-                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="@TestDataService.MaxItems" class="form-control" placeholder="">
+                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="@TestDataService.MaxItems" class="items form-control" placeholder="">
                         </p>
                         <button id="rest-get-array" class="btn btn-sm btn-primary">Test</button>
                         
@@ -80,7 +83,7 @@
                         <h5 class="card-title">gRPC-Web unary call</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Test fetching array of items with gRPC-Web unary call</h6>
                         <p class="card-text">
-                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="@TestDataService.MaxItems" class="form-control" placeholder="">
+                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="@TestDataService.MaxItems" class="items form-control" placeholder="">
                         </p>
                         <button id="grpc-unary-array" class="btn btn-sm btn-primary">Test</button>
 
@@ -96,7 +99,7 @@
                         <h5 class="card-title">SignalR Invoke</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Test SignalR Invoke method that returns array of items</h6>
                         <p class="card-text">
-                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="@TestDataService.MaxItems" class="form-control" placeholder="">
+                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="@TestDataService.MaxItems" class="items form-control" placeholder="">
                         </p>
                         <button id="signalr-invoke-array" class="btn btn-sm btn-primary">Test</button>
 
@@ -106,6 +109,68 @@
                 </div>
             </div>
 
+        </div>
+        
+        <div class="row">
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">REST parallel get</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Test parallel array fetching from REST endpoint</h6>
+                        <p class="card-text">
+                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="10" class="items form-control" placeholder="">
+                        </p>
+                        <p class="card-text">
+                            Number of calls (max 1000): <input type="number" max="1000" min="0" value="750" class="calls form-control" placeholder="">
+                        </p>
+                        <button id="rest-parallel-get" class="btn btn-sm btn-primary">Test</button>
+                        
+                        <code>
+                        </code>
+                        
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">gRPC-Web parallel unary call</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Test parallel gRPC-Web unary calls that return an array</h6>
+                        <p class="card-text">
+                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="10" class="items form-control" placeholder="">
+                        </p>
+                        <p class="card-text">
+                            Number of calls (max 1000): <input type="number" max="1000" min="0" value="750" class="calls form-control" placeholder="">
+                        </p>
+                        <button id="grpc-parallel-unary" class="btn btn-sm btn-primary">Test</button>
+                        
+                        <code>
+                        </code>
+                        
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-sm">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">SignalR invoke parallel</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Test parallel signalR invokes that return an array</h6>
+                        <p class="card-text">
+                            Number of items (max @TestDataService.MaxItems): <input type="number" max="@TestDataService.MaxItems" min="0" value="10" class="items form-control" placeholder="">
+                        </p>
+                        <p class="card-text">
+                            Number of calls (max 1000): <input type="number" max="1000" min="0" value="750" class="calls form-control" placeholder="">
+                        </p>
+                        <button id="signalr-parallel-invoke" class="btn btn-sm btn-primary">Test</button>
+                        
+                        <code>
+                        </code>
+                        
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
